# tsv

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  deno.json  derived_script_read_design.md  module_script_design.md  rust-toolchain.toml  tsconfig.json
crates/tsv_arena/: CLAUDE.md  Cargo.toml
crates/tsv_arena/src/: lib.rs
crates/tsv_check/: CLAUDE.md  Cargo.toml
crates/tsv_check/src/: diag.rs  hash.rs  ids.rs  lib.rs  merge.rs  options.rs  program.rs  span_scan.rs
crates/tsv_check/src/binder/: atoms.rs  flow.rs  mod.rs  sym.rs  symbols.rs
crates/tsv_check/src/binder/flow/: build.rs  flags.rs  graph.rs  mod.rs  product.rs  tests.rs
crates/tsv_check/src/binder/lower/: expression.rs  mod.rs  statement.rs  types.rs
crates/tsv_check/src/binder/sym/: declare.rs  expression.rs  members.rs  mod.rs  statement.rs  walk.rs
crates/tsv_check/src/check/: duplicate_members.rs  mod.rs  unreachable.rs
crates/tsv_check/tests/: lib_base.rs
crates/tsv_cli/: CLAUDE.md  Cargo.toml
crates/tsv_cli/src/: json_utils.rs  lib.rs  main.rs
crates/tsv_cli/src/cli/: discover.rs  format_source.rs  input.rs  mod.rs
crates/tsv_css/: CLAUDE.md  Cargo.toml
crates/tsv_css/src/: color.rs  escapes.rs  keyword_set.rs  lib.rs  number.rs  url.rs  whitespace.rs
crates/tsv_css/src/ast/: convert.rs  internal.rs  mod.rs  public.rs
crates/tsv_css/src/lexer/: comments.rs  identifiers.rs  mod.rs  numbers.rs  strings.rs  token.rs
crates/tsv_css/src/parser/: atrules.rs  attributes.rs  decl_scan.rs  declarations.rs  mod.rs  pseudo.rs  selectors.rs
crates/tsv_css/src/printer/: atrules.rs  declarations.rs  mod.rs  rules.rs  selectors.rs  value_normalization.rs  values.rs
crates/tsv_debug/: CLAUDE.md  Cargo.toml
crates/tsv_debug/src/: compile_fixtures.rs  diff.rs  error.rs  lib.rs  main.rs  render_browser.rs  render_normalize.rs
crates/tsv_debug/src/audit/: examples.rs  mod.rs  node_edge.rs  parallel.rs  properties.rs  ratchet.rs  report.rs  sites.rs  tally.rs
crates/tsv_debug/src/cli/: mod.rs
crates/tsv_debug/src/deno/: actor.rs  error.rs  mod.rs  protocol.rs  sidecar.ts
crates/tsv_debug/src/fixtures/: audit_signature.rs  discovery.rs  mod.rs  model.rs  variants.rs
crates/tsv_debug/src/test262/: discovery.rs  frontmatter.rs  mod.rs  runner.rs
crates/tsv_debug/src/tsc_conformance/: baseline.rs  corpus.rs  directives.rs  discovery.rs  index.rs  libs.rs  mod.rs  options_meta.rs  pretty.rs  query.rs  render.rs  roundtrip.rs  runner.rs  variants.rs
crates/tsv_discover/: CLAUDE.md  Cargo.toml
crates/tsv_discover/src/: lib.rs
crates/tsv_ffi/: CLAUDE.md  Cargo.toml
crates/tsv_ffi/src/: lib.rs
crates/tsv_html/: CLAUDE.md  Cargo.toml  build.rs
crates/tsv_html/src/: elements.rs  entities.json  entities.rs  lib.rs  whitespace.rs
crates/tsv_ignore/: CLAUDE.md  Cargo.toml
crates/tsv_ignore/src/: glob.rs  lib.rs
crates/tsv_ignore/tests/: git_oracle.rs
crates/tsv_lang/: CLAUDE.md  Cargo.toml
crates/tsv_lang/src/: comment.rs  comment_ledger.rs  config.rs  error.rs  escapes.rs  interner.rs  json.rs  json_writer.rs  lib.rs  location.rs  output.rs  parser.rs  printing.rs  sizing.rs  source_scan.rs  span.rs
crates/tsv_lang/src/doc/: arena.rs  arena_fits.rs  arena_render.rs  arena_render_fill.rs  mod.rs  render_config.rs  swallow.rs  types.rs
crates/tsv_napi/: CLAUDE.md  Cargo.toml  build.rs
crates/tsv_napi/src/: lib.rs
crates/tsv_svelte/: CLAUDE.md  Cargo.toml
crates/tsv_svelte/src/: lexer.rs  lib.rs
crates/tsv_svelte/src/ast/: internal.rs  mod.rs  public.rs
crates/tsv_svelte/src/parser/: attribute.rs  block.rs  element.rs  expression_tag.rs  fragment.rs  mod.rs  parser_impl.rs  script.rs  style.rs  tag.rs
crates/tsv_svelte/src/printer/: attributes.rs  blocks.rs  helpers.rs  mod.rs  script_style.rs  tags.rs  text.rs
crates/tsv_svelte_compile/: CLAUDE.md  Cargo.toml
crates/tsv_svelte_compile/src/: analyze.rs  attr_refs.rs  attribute.rs  attribute_bind.rs  attribute_class_style.rs  blocks.rs  body_builder.rs  build.rs  census.rs  component.rs  css_scope.rs  derived_destructure.rs  destructure.rs  dropped.rs  element.rs  element_census.rs  erase.rs  fragment.rs  html_tree.rs  lib.rs  namespace.rs  needs_context.rs  parity.rs  refusal.rs  refusal_buckets.rs  refusal_census.rs  rune_guard.rs  script_bindings.rs  script_collision.rs  script_comments.rs  script_decls.rs  script_props.rs  script_rewrite.rs  script_ts_gate.rs  snippet.rs  snippet_emit.rs  special_element_kind.rs  specifier_normalize.rs  store_rewrite.rs  template_value.rs  (+4 more)
crates/tsv_svelte_compile/src/tests/: assignment.rs  attributes.rs  bind.rs  blocks.rs  boundary.rs  canonicalize.rs  class_directives.rs  comments.rs  components.rs  context_wrapper.rs  css_scope.rs  dollar_bindings.rs  dropped_and_special.rs  element_refusals.rs  element_spread.rs  errors.rs  mod.rs  module_script.rs  refusal_buckets.rs  rune_store_collision.rs  runes_derived.rs  runes_misc.rs  runes_state.rs  script_rewrite.rs  slots_and_head.rs  snippets.rs  specifier_normalize.rs  stores.rs  style_directives.rs  support.rs  text_emission.rs  transitions.rs  typescript.rs  validate.rs
crates/tsv_ts/: CLAUDE.md  Cargo.toml
crates/tsv_ts/src/: config.rs  goal.rs  lib.rs
crates/tsv_ts/src/ast/: mod.rs  precedence.rs
crates/tsv_ts/src/lexer/: comments.rs  core.rs  escapes.rs  ident.rs  mod.rs  token.rs
crates/tsv_ts/src/parser/: expression.rs  expression_arrow.rs  expression_assignable.rs  expression_literals.rs  expression_lookahead.rs  expression_template.rs  expression_type_args.rs  mod.rs  parameters.rs  scan.rs  type_members.rs  types.rs
crates/tsv_ts/src/printer/: analysis.rs  buffer_stats.rs  class_common.rs  comments.rs  decorators.rs  ignore.rs  layout.rs  mod.rs  needs_parens.rs  program.rs
crates/tsv_wasm/: CLAUDE.md  Cargo.toml  README_all.md  README_format.md  README_parse.md
crates/tsv_wasm/npm/: cli.js  locations.d.ts  locations.js
crates/tsv_wasm/src/: lib.rs
crates/tsv_wasm/types/: tsv_ast.d.ts
docs/: audits.md  (+23 more)
(+13237 files in other folders)
