[package]
name = "tsv_arena"
version.workspace = true
edition.workspace = true
description = "Per-thread reusable arenas for tsv's binding hot loop"
license.workspace = true
repository.workspace = true

[dependencies]
bumpalo.workspace = true
# `with_interner` (parse + format) needs the `Interner` type, and `with_doc_arena`
# (format) the `DocArena` type — both from tsv_lang, which every binding already
# links via the language crates, so this pulls no crate the graph lacked.
tsv_lang.workspace = true

[features]
# `format` adds the reusable doc arena (`with_doc_arena`); `with_ast_arena` and
# `with_interner` are always available (parse and format both use them). Default-on
# so a standalone `cargo test -p tsv_arena` exercises every helper; the binding
# crates set `default-features = false` and re-enable `format` from their own
# `format` feature.
default = ["format"]
format = []

[lints]
workspace = true
