[package]
name = "tsv_arena"
version.workspace = true
edition.workspace = true
description = "Per-thread reusable arenas for tsv's binding hot loop"
license.workspace = true
repository.workspace = true

[dependencies]
bumpalo.workspace = true
# Only `with_doc_arena` (the `format` feature) needs the `DocArena` type from
# tsv_lang, so the dep is optional and pulled by `format` — a parse-only binding
# gets just `with_ast_arena` and never links tsv_lang.
tsv_lang = { workspace = true, optional = true }

[features]
# `format` adds the reusable doc arena (`with_doc_arena`, which pulls tsv_lang);
# `with_ast_arena` is always available (parse and format both use it). Default-on
# so a standalone `cargo test -p tsv_arena` exercises every helper; the binding
# crates set `default-features = false` and re-enable `format` from their own
# `format` feature.
default = ["format"]
format = ["dep:tsv_lang"]

[lints]
workspace = true
