[package]
name = "tsv_css"
version.workspace = true
edition.workspace = true
description = "CSS parsing and formatting library"

[features]
default = ["convert"]
# The wire-JSON conversion layer (`ast/convert/write.rs`). Off in the
# @fuzdev/tsv_format_wasm build; on for every other consumer. Pulls in the
# shared wire-JSON writer substrate (`tsv_lang/json`) the emitter builds on.
convert = ["dep:serde_json", "tsv_lang/json"]
# Exposes `debug_token_stream` for the differential lexer harness (`tsv_debug
# lex_diff`). Off in production builds; enabled only by `tsv_debug`.
debug_lex = []
# Opt-in print-once comment ledger (`tsv_lang::comment_ledger`): the format entry
# points register the stylesheet's comments, `print_css_comment` /
# `comment_blocks_in_range` record each emit, and the raw-slice seams (format-ignore,
# glued compound selectors, unparseable selectors) record their ranges. Off in
# production builds.
comment_check = ["tsv_lang/comment_check"]

[dependencies]
tsv_lang.workspace = true
# Bump arena that owns the internal AST (caller-owns-`Bump`); shared with the
# host document's arena when CSS is embedded in a Svelte `<style>`.
bumpalo.workspace = true
serde_json = { workspace = true, optional = true }
phf.workspace = true

[lints]
workspace = true
