[package]
name = "tsv_debug"
version.workspace = true
edition.workspace = true
description = "Development utilities for tsv (AST debugging, printer comparison)"

[[bin]]
name = "tsv_debug"
path = "src/main.rs"

[dependencies]
tsv_cli = { path = "../tsv_cli" }
tsv_lang = { workspace = true, features = ["swallow_check"] }
tsv_svelte = { workspace = true, features = ["convert"] }
tsv_ts = { workspace = true, features = ["convert", "debug_lex"] }
tsv_css = { workspace = true, features = ["convert", "debug_lex"] }
tsv_html = { workspace = true }
argh.workspace = true
serde.workspace = true
serde_json.workspace = true
bumpalo.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "time"] }
thiserror.workspace = true
similar = "2.7"
futures-util.workspace = true
tempfile = "3"
# Experimental perf A/B — see [features].
mimalloc = { workspace = true, optional = true }

[features]
# EXPERIMENTAL: swap in mimalloc as the global allocator (off by default). Used
# to A/B the `profile` command — `cargo run --release -p tsv_debug --features
# mimalloc -- profile ...` vs the default build.
mimalloc = ["dep:mimalloc"]

[lints]
workspace = true
