[package]
name = "tsv_debug"
version.workspace = true
edition.workspace = true
description = "Development utilities for tsv (AST debugging, printer comparison)"

[[bin]]
name = "tsv_debug"
path = "src/main.rs"

[features]
# Opt-in: compiles tsv_lang's render-time swallow check into this binary and
# enables the `swallow_audit` subcommand (the `swallow:audit` deno task passes
# it). Off by default so default tsv_debug builds — including `profile` and
# `perf` sessions — measure production-shaped render code with no
# instrumentation branch in the render loop.
swallow_check = ["tsv_lang/swallow_check"]

[dependencies]
tsv_cli = { path = "../tsv_cli" }
tsv_lang = { workspace = true }
tsv_svelte = { workspace = true, features = ["convert"] }
tsv_ts = { workspace = true, features = ["convert", "debug_lex"] }
tsv_css = { workspace = true, features = ["convert", "debug_lex"] }
tsv_svelte_compile = { workspace = true }
tsv_html = { workspace = true }
argh.workspace = true
serde.workspace = true
serde_json.workspace = true
bumpalo.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "time"] }
thiserror.workspace = true
similar = "2.7"
futures-util.workspace = true
tempfile = "3"

[lints]
workspace = true
