[package]
name = "tsv_debug"
version.workspace = true
edition.workspace = true
description = "Development utilities for tsv (AST debugging, printer comparison)"

[[bin]]
name = "tsv_debug"
path = "src/main.rs"

[features]
# Opt-in: compiles tsv_lang's render-time swallow check into this binary and
# enables the `swallow_audit` subcommand (the `swallow:audit` deno task passes
# it). Off by default so default tsv_debug builds — including `profile` and
# `perf` sessions — measure production-shaped render code with no
# instrumentation branch in the render loop.
swallow_check = ["tsv_lang/swallow_check"]
# Opt-in: compiles tsv_lang's print-once comment ledger into this binary and enables the
# `comment_audit` subcommand (the `comments:audit` deno task passes it). Off by default
# for the same reason as `swallow_check` — a default build carries no registration in the
# format entry points and no record hook in the printers' comment seams.
comment_check = [
	"tsv_lang/comment_check",
	"tsv_ts/comment_check",
	"tsv_css/comment_check",
	"tsv_svelte/comment_check",
]
# Umbrella that compiles both diagnostic seams into one binary and enables both
# the `swallow_audit` and `comment_audit` subcommands. EVERY audit deno task passes
# `--features audits` under `--profile corpus` — including the ones that need neither
# seam (`scan:audit`, `fanout:audit`, `conformance:audit`, `render:audit`) — so all of
# them share ONE `corpus+audits` build instead of splitting the workspace into a
# feature-on and a feature-off world that each recompile `tsv_ts` and `tsv_debug`.
# The instrumentation is inert unless armed (both seams are `AtomicBool` false by
# default), so carrying it costs those commands nothing but the compile it saves.
# Forwards to each member's fan-out (no need to also name `tsv_lang/audits` —
# `swallow_check`+`comment_check` already cover its members).
audits = ["swallow_check", "comment_check"]

[dependencies]
tsv_cli = { path = "../tsv_cli" }
tsv_lang = { workspace = true }
tsv_svelte = { workspace = true, features = ["convert"] }
tsv_ts = { workspace = true, features = ["convert", "debug_lex"] }
tsv_css = { workspace = true, features = ["convert", "debug_lex"] }
tsv_html = { workspace = true }
argh.workspace = true
serde.workspace = true
serde_json.workspace = true
bumpalo.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "time"] }
thiserror.workspace = true
similar = "2.7"
futures-util.workspace = true
tempfile = "3"

[lints]
workspace = true
