[package]
name = "tsv_lang"
version.workspace = true
edition.workspace = true
description = "Language-agnostic foundation primitives for tsv"

[features]
# Opt-in render-time line-comment swallow check (diagnostic). Off by default so
# production artifacts (wasm/cli/ffi) — and default `tsv_debug` builds, whose
# profiles must measure production-shaped render code — compile it out entirely:
# no `DocArena` side-set field, no render-loop hook. `tsv_debug` forwards this
# feature (off by default there too) to drive `swallow_audit`. See src/doc/swallow.rs.
swallow_check = []

[dependencies]
smallvec.workspace = true
string-interner.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
