[package]
name = "tsv_lang"
version.workspace = true
edition.workspace = true
description = "Language-agnostic foundation primitives for tsv"

[features]
# Opt-in render-time line-comment swallow check (diagnostic). Off by default so
# production artifacts (wasm/cli/ffi) — and default `tsv_debug` builds, whose
# profiles must measure production-shaped render code — compile it out entirely:
# no `DocArena` side-set field, no render-loop hook. `tsv_debug` forwards this
# feature (off by default there too) to drive `swallow_audit`. See src/doc/swallow.rs.
swallow_check = []
# Opt-in print-once comment ledger (diagnostic): every comment a document parses must
# be emitted exactly once. Off by default, same reasoning as `swallow_check` — no
# registration in the format entry points, no record hook in the printers' comment
# seams. `tsv_ts` / `tsv_css` / `tsv_svelte` / `tsv_debug` each forward it. See
# src/comment_ledger.rs.
comment_check = []
# Umbrella that turns on every diagnostic seam at once (`swallow_check` +
# `comment_check`). The audit deno tasks build one binary under this feature
# instead of one per seam. Off by default, same as its members — production
# artifacts and default `tsv_debug` profile/perf builds compile all of it out.
audits = ["swallow_check", "comment_check"]
# Shared wire-JSON writer substrate (`json_writer`), pulled in transitively by
# each language crate's `convert` feature. Off in the format-only
# @fuzdev/tsv_format_wasm build, so `serde_json` never enters that graph.
json = ["dep:serde_json"]

[dependencies]
smallvec.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
# Only for the `json` feature's wire-JSON writer, whose `string`/`f64` emitters
# delegate to `serde_json::to_writer` for exact escape/ryu parity with the typed
# serialization. Optional so format-only builds stay serde-free.
serde_json = { workspace = true, optional = true }

[lints]
workspace = true
