[package]
name = "tsv_svelte"
version.workspace = true
edition.workspace = true
description = "Svelte parsing and formatting library"

[features]
default = ["convert"]
# Public AST + JSON serialization layer. Forwards to tsv_ts/tsv_css
# because Svelte's convert layer reuses their JSON helpers.
convert = ["dep:serde", "dep:serde_json", "tsv_ts/convert", "tsv_css/convert"]

[dependencies]
tsv_lang.workspace = true
tsv_html.workspace = true
tsv_ts.workspace = true
tsv_css.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
string-interner.workspace = true

[lints]
workspace = true
