[package]
name = "tsv_svelte"
version.workspace = true
edition.workspace = true
description = "Svelte parsing and formatting library"

[features]
default = ["convert"]
# The wire-JSON conversion layer (`ast/convert/write.rs`). Forwards to
# tsv_ts/tsv_css because the writer composes their embedded emitters.
convert = ["dep:serde_json", "tsv_lang/json", "tsv_ts/convert", "tsv_css/convert"]

[dependencies]
tsv_lang.workspace = true
tsv_html.workspace = true
tsv_ts.workspace = true
tsv_css.workspace = true
bumpalo.workspace = true
serde_json = { workspace = true, optional = true }
string-interner.workspace = true
smallvec.workspace = true

[lints]
workspace = true
